--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="./index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
 </head>
-<body>
+<body >
 
    <section>
     <div id="nav">
@@ -102,7 +102,7 @@
 
 
                 <!-- contact -->
-                <section style="margin: 0; padding: 0;">
+                <section style="margin: 0; padding: 0; height: 500px;">
                     <div class="cont-content">
                         <h2>CONTACT</h2>
                         
